test/types/type_variables/deitz/test_clone_class1b.good
error: '_retval' has mixed basic types:( null float64 int64 ) 
  called from test_clone_class1b.chpl:4
test_clone_class1b.chpl:1: class foo:: 'x' has mixed basic types:( null float64 int64 ) 
<internal>:0: expression has mixed basic types:( null float64 int64 ) 
  called from test_clone_class1b.chpl:4
<internal>:0: expression has mixed basic types:( null float64 int64 ) 
  called from test_clone_class1b.chpl:14
<internal>:0: expression has mixed basic types:( null float64 int64 ) 
  called from test_clone_class1b.chpl:10
<internal>:0: expression has mixed basic types:( null float64 int64 ) 
  called from test_clone_class1b.chpl:4
<internal>:0: expression has mixed basic types:( null float64 int64 ) 
  called from test_clone_class1b.chpl:4
<internal>:0: expression has mixed basic types:( null float64 int64 ) 
  called from test_clone_class1b.chpl:4
<internal>:0: expression has mixed basic types:( null float64 int64 ) 
<internal>:0: expression has mixed basic types:( null float64 int64 ) 
test_clone_class1b.chpl:4: expression has mixed basic types:( null float64 int64 ) 
  called from test_clone_class1b.chpl:12
  called from test_clone_class1b.chpl:16
test_clone_class1b.chpl:10: expression has mixed basic types:( null float64 int64 ) 
test_clone_class1b.chpl:14: expression has mixed basic types:( null float64 int64 ) 
fail: fatal error, program does not type
